kubernetes/apps/networking/ingresses/ingressRoutes/external-services/nas/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app nas
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: nas
  ports:
    - name: webui
      port: 80
      protocol: TCP
      targetPort: 80
